--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -34,3 +34,7 @@ msgctxt "Languages::mwl_xlsx.empty_list"
 msgid "Wishlist is empty"
 msgstr "Список пуст"
 
+msgctxt "Languages::mwl_xlsx.already_exists"
+msgid "Product already in list"
+msgstr "Товар уже в списке"
+
