Add wishlist page and dropdown integration (#6)
* Add wishlist list page and improve dropdown

* Fix wishlist list template and notification message

* Remove Bright Theme templates

* Prevent wishlist duplicates and use standard blocks

* fixes

--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -30,3 +30,11 @@ msgctxt "Languages::mwl_xlsx.added"
 msgid "Added to wishlist"
 msgstr "Добавлено в список желаний"
 
+msgctxt "Languages::mwl_xlsx.empty_list"
+msgid "Wishlist is empty"
+msgstr "Список пуст"
+
+msgctxt "Languages::mwl_xlsx.already_exists"
+msgid "Product already in list"
+msgstr "Товар уже в списке"
+
