--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -28,3 +28,11 @@ msgctxt "Languages::mwl_xlsx.added"
 msgid "Added to wishlist"
 msgstr "Added to wishlist"
 
+msgctxt "Languages::mwl_xlsx.empty_list"
+msgid "Wishlist is empty"
+msgstr "Wishlist is empty"
+
+msgctxt "Languages::mwl_xlsx.already_exists"
+msgid "Product already in list"
+msgstr "Product already in list"
+
