Add XLSX export for wishlist manage page

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -36,3 +36,7 @@ msgctxt "Languages::mwl_xlsx.already_exists"
 msgid "Product already in list"
 msgstr "Product already in list"
 
+msgctxt "Languages::mwl_xlsx.export"
+msgid "Export XLSX"
+msgstr "Export XLSX"
+
