--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -38,3 +38,7 @@ msgctxt "Languages::mwl_xlsx.already_exists"
 msgid "Product already in list"
 msgstr "Товар уже в списке"
 
+msgctxt "Languages::mwl_xlsx.export"
+msgid "Export XLSX"
+msgstr "Экспорт в XLSX"
+
