Rename wishlist to media list

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -5,20 +5,20 @@ msgstr "Project-Id-Version: tygh\n"
 "Language: en_US"
 
 msgctxt "Addons::name::mwl_xlsx"
-msgid "Multi Wishlist"
-msgstr "Multi Wishlist"
+msgid "Media Lists"
+msgstr "Media Lists"
 
 msgctxt "Addons::description::mwl_xlsx"
-msgid "Create and manage multiple wishlists."
-msgstr "Create and manage multiple wishlists."
+msgid "Create and manage multiple media lists."
+msgstr "Create and manage multiple media lists."
 
 msgctxt "Languages::mwl_xlsx.my_lists"
-msgid "My wishlists"
-msgstr "My wishlists"
+msgid "My media lists"
+msgstr "My media lists"
 
 msgctxt "Languages::mwl_xlsx.wishlists"
-msgid "Wishlists"
-msgstr "Wishlists"
+msgid "Media lists"
+msgstr "Media lists"
 
 msgctxt "Languages::mwl_xlsx.new_list"
 msgid "New list…"
@@ -33,12 +33,12 @@ msgid "Added to <a href=\"[list_url]\">[list_name]</a>"
 msgstr "Added to <a href=\"[list_url]\">[list_name]</a>"
 
 msgctxt "Languages::mwl_xlsx.added_plain"
-msgid "Added to wishlist"
-msgstr "Added to wishlist"
+msgid "Added to media list"
+msgstr "Added to media list"
 
 msgctxt "Languages::mwl_xlsx.empty_list"
-msgid "Wishlist is empty"
-msgstr "Wishlist is empty"
+msgid "Media list is empty"
+msgstr "Media list is empty"
 
 msgctxt "Languages::mwl_xlsx.already_exists"
 msgid "Product already in list"
@@ -61,8 +61,8 @@ msgid "Remove this list?"
 msgstr "Remove this list?"
 
 msgctxt "Languages::mwl_xlsx.add_all_to_wishlist"
-msgid "Add all to wishlist"
-msgstr "Add all to wishlist"
+msgid "Add all to media list"
+msgstr "Add all to media list"
 
 msgctxt "Languages::mwl_xlsx.xlsx_templates"
 msgid "XLSX templates"
@@ -71,4 +71,8 @@ msgstr "XLSX templates"
 msgctxt "Languages::mwl_xlsx.upload_xlsx_template"
 msgid "Upload XLSX template"
 msgstr "Upload XLSX template"
+
+msgctxt "Languages::mwl_xlsx.add_to_wishlist"
+msgid "Add to media list"
+msgstr "Add to media list"
 
