Use standard table layout for media list management

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -84,3 +84,11 @@ msgctxt "Languages::mwl_xlsx.removed"
 msgid "Removed"
 msgstr "Removed"
 
+msgctxt "Languages::mwl_xlsx.list_name"
+msgid "List name"
+msgstr "List name"
+
+msgctxt "Languages::mwl_xlsx.products"
+msgid "Products"
+msgstr "Products"
+
