--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -28,6 +28,10 @@ msgctxt "Languages::mwl_xlsx.enter_list_name"
 msgid "Enter list name"
 msgstr "Enter list name"
 
+msgctxt "Languages::mwl_xlsx.default_list_name"
+msgid "Media list"
+msgstr "Media list"
+
 msgctxt "Languages::mwl_xlsx.added"
 msgid "Added to <a href=\"[list_url]\">[list_name]</a>"
 msgstr "Added to <a href=\"[list_url]\">[list_name]</a>"
