--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -30,6 +30,10 @@ msgctxt "Languages::mwl_xlsx.enter_list_name"
 msgid "Enter list name"
 msgstr "Введите название подборки"
 
+msgctxt "Languages::mwl_xlsx.default_list_name"
+msgid "Media list"
+msgstr "Подборка"
+
 msgctxt "Languages::mwl_xlsx.added"
 msgid "Added to <a href=\"[list_url]\">[list_name]</a>"
 msgstr "Добавлено в <a href=\"[list_url]\">[list_name]</a>"
