--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -159,3 +159,11 @@ msgstr "User groups allowed for media lists"
 msgctxt "Languages::mwl_xlsx.login_to_view_price"
 msgid "Log in to view price"
 msgstr "Log in to view price"
+
+msgctxt "Languages::mwl_xlsx.max_list_items"
+msgid "Maximum items per list"
+msgstr "Maximum items per list"
+
+msgctxt "Languages::mwl_xlsx.list_limit_reached"
+msgid "You cannot add more than [limit] items to a media list"
+msgstr "You cannot add more than [limit] items to a media list"
