--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -108,10 +108,6 @@ msgctxt "Languages::mwl_xlsx.media_lists"
 msgid "Media lists"
 msgstr "Media lists"
 
-msgctxt "Languages::mwl_xlsx.settings"
-msgid "Settings"
-msgstr "Settings"
-
 msgctxt "Languages::mwl_xlsx.price_multiplier"
 msgid "Price multiplier"
 msgstr "Price multiplier"
@@ -123,6 +119,10 @@ msgstr "Price append"
 msgctxt "Languages::mwl_xlsx.round_to"
 msgid "Round price to"
 msgstr "Round price to"
+
+msgctxt "Languages::mwl_xlsx.settings"
+msgid "Price setting for agencies"
+msgstr "Price setting for agencies"
 
 msgctxt "Languages::mwl_xlsx.settings_saved"
 msgid "Settings saved"
