--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -33,8 +33,8 @@ msgid "Media list"
 msgstr "Media list"
 
 msgctxt "Languages::mwl_xlsx.added"
-msgid "Added to <a href=\"[list_url]\">[list_name]</a>"
-msgstr "Added to <a href=\"[list_url]\">[list_name]</a>"
+msgid "Added to <a target=\"_blank\" href=\"[list_url]\">[list_name]</a>"
+msgstr "Added to <a target=\"_blank\" href=\"[list_url]\">[list_name]</a>"
 
 msgctxt "Languages::mwl_xlsx.added_plain"
 msgid "Added to media list"
@@ -223,3 +223,7 @@ msgstr "Telegram chat ID"
 msgctxt "Languages::mwl_xlsx.notify_email"
 msgid "Notification email"
 msgstr "Notification email"
+
+msgctxt "Languages::mwl_xlsx.added_short"
+msgid "Added"
+msgstr "Added"
