--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -35,8 +35,8 @@ msgid "Media list"
 msgstr "Подборка"
 
 msgctxt "Languages::mwl_xlsx.added"
-msgid "Added to <a href=\"[list_url]\">[list_name]</a>"
-msgstr "Добавлено в <a href=\"[list_url]\">[list_name]</a>"
+msgid "Added to <a target=\"_blank\" href=\"[list_url]\">[list_name]</a>"
+msgstr "Добавлено в <a target=\"_blank\" href=\"[list_url]\">[list_name]</a>"
 
 msgctxt "Languages::mwl_xlsx.added_plain"
 msgid "Added to media list"
@@ -197,3 +197,7 @@ msgstr "Издание отправлено на проверку цены. Ка
 msgctxt "Languages::mwl_xlsx.price_check_failed"
 msgid "Failed to send a price check request. Please try again later."
 msgstr "Не удалось отправить запрос на проверку. Повторите позже."
+
+msgctxt "Languages::mwl_xlsx.added_short"
+msgid "Added"
+msgstr "Добавлено"
