fix google export, move request price button, go to list link, icon button on some layouts in product list

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -227,3 +227,7 @@ msgstr "Notification email"
 msgctxt "Languages::mwl_xlsx.added_short"
 msgid "Added"
 msgstr "Added"
+
+msgctxt "Languages::mwl_xlsx.go_to_list"
+msgid "Go to"
+msgstr "Go to"
