fix js lang vars, remove unused fn_register_hooks

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -239,3 +239,7 @@ msgstr "Your status"
 msgctxt "Languages::mwl_xlsx.status_tooltip"
 msgid "Your status is [status]"
 msgstr "Your status is [status]"
+
+msgctxt "Languages::mwl_xlsx.select_list"
+msgid "Select media list"
+msgstr "Select media list"
