--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -84,6 +84,10 @@ msgctxt "Languages::mwl_xlsx.order_messages"
 msgid "Messages"
 msgstr "Messages"
 
+msgctxt "Languages::mwl_xlsx.order_messages_unread"
+msgid "Unread"
+msgstr "Unread"
+
 msgctxt "Languages::mwl_xlsx.add_to_wishlist"
 msgid "Add to media list"
 msgstr "Add to media list"
