Show order items and fix vendor communication user type

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -84,6 +84,10 @@ msgctxt "Languages::mwl_xlsx.order_messages"
 msgid "Messages"
 msgstr "Messages"
 
+msgctxt "Languages::mwl_xlsx.order_items"
+msgid "Items"
+msgstr "Items"
+
 msgctxt "Languages::mwl_xlsx.order_messages_unread"
 msgid "Unread"
 msgstr "Unread"
