--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -82,6 +82,10 @@ msgctxt "Languages::mwl_xlsx.order_messages"
 msgid "Messages"
 msgstr "Сообщения"
 
+msgctxt "Languages::mwl_xlsx.order_items"
+msgid "Items"
+msgstr "Товары"
+
 msgctxt "Languages::mwl_xlsx.order_messages_unread"
 msgid "Unread"
 msgstr "Новые"
