Add vendor communication message counter to orders search page (#31)
* Show vendor communication message count in orders search

* Highlight unread vendor communication messages

* Link order messages count to vendor communication thread

* Show order items and fix vendor communication user type

* Resolve order item lookup for message summary

* Adjust date format for Russian orders view

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -80,6 +80,18 @@ msgctxt "Languages::mwl_xlsx.upload_xlsx_template"
 msgid "Upload XLSX template"
 msgstr "Upload XLSX template"
 
+msgctxt "Languages::mwl_xlsx.order_messages"
+msgid "Messages"
+msgstr "Messages"
+
+msgctxt "Languages::mwl_xlsx.order_items"
+msgid "Items"
+msgstr "Items"
+
+msgctxt "Languages::mwl_xlsx.order_messages_unread"
+msgid "Unread"
+msgstr "Unread"
+
 msgctxt "Languages::mwl_xlsx.add_to_wishlist"
 msgid "Add to media list"
 msgstr "Add to media list"
