--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -78,6 +78,18 @@ msgctxt "Languages::mwl_xlsx.upload_xlsx_template"
 msgid "Upload XLSX template"
 msgstr "Загрузить XLSX-шаблон"
 
+msgctxt "Languages::mwl_xlsx.order_messages"
+msgid "Messages"
+msgstr "Сообщения"
+
+msgctxt "Languages::mwl_xlsx.order_items"
+msgid "Items"
+msgstr "Товары"
+
+msgctxt "Languages::mwl_xlsx.order_messages_unread"
+msgid "Unread"
+msgstr "Новые"
+
 msgctxt "Languages::mwl_xlsx.add_to_wishlist"
 msgid "Add to media list"
 msgstr "Добавить в подборку"
