feat: Short price slider, split by thousands, add metrika goals to mwl_xlsx export buttons

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -283,3 +283,11 @@ msgstr "Set password"
 msgctxt "Languages::mwl_xlsx.invite_hint"
 msgid "The link is available for 7 days."
 msgstr "The link is available for 7 days."
+
+msgctxt "SettingsOptions::mwl_xlsx::general"
+msgid "General"
+msgstr "General"
+
+msgctxt "SettingsOptions::mwl_xlsx::notifications"
+msgid "Notifications"
+msgstr "Notifications"
