--- a/var/langs/ru/addons/mwl_xlsx.po
+++ b/var/langs/ru/addons/mwl_xlsx.po
@@ -266,6 +266,18 @@ msgctxt "SettingsOptions::mwl_xlsx::notifications"
 msgid "Notifications"
 msgstr "Уведомления"
 
+msgctxt "Languages::mwl_xlsx.planfix_task"
+msgid "Planfix task"
+msgstr "Задача Planfix"
+
+msgctxt "SettingsOptions::mwl_xlsx::planfix_origin"
+msgid "Planfix origin"
+msgstr "Адрес Planfix"
+
+msgctxt "SettingsTooltips::mwl_xlsx::planfix_origin"
+msgid "Base Planfix URL (example: https://example.planfix.com). Example task link: https://example.planfix.com/task/12345 where 12345 is the planfix_object_id."
+msgstr "Базовый адрес Planfix (пример: https://example.planfix.com). Пример ссылки на задачу: https://example.planfix.com/task/12345, где 12345 — planfix_object_id."
+
 msgctxt "Languages::mwl_xlsx.shortnum_thousand"
 msgid " K"
 msgstr " тыс."
