fix: Make last messages tooltips instead of title, highlight side

--- a/var/langs/en/addons/mwl_xlsx.po
+++ b/var/langs/en/addons/mwl_xlsx.po
@@ -81,8 +81,8 @@ msgid "Upload XLSX template"
 msgstr "Upload XLSX template"
 
 msgctxt "Languages::mwl_xlsx.order_messages"
-msgid "Messages"
-msgstr "Messages"
+msgid "Msgs"
+msgstr "Msgs"
 
 msgctxt "Languages::mwl_xlsx.order_items"
 msgid "Items"
